[JSC] Fix build break since r199866. Unreviewed. https://bugs.webkit.org/show_bug.cgi?id=156892

* runtime/MathCommon.h: Add namespace std to isnormal invoking.

Canonical link: https://commits.webkit.org/174998@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199868 268f45cc-cd09-0410-ab3c-d52691b4dbfc